up bug overflow

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -41,7 +41,8 @@ header .popover-open.about-links {display:block;}
 header .about-links .item {padding:0 10px; height:30px; line-height:30px; font-size:1rem;}
 
 /** NAV **/
-.slide-nav {position: absolute; top:0; width:225px; min-height:100%; transition: 1s; z-index:2;}
+.slide-nav {position: absolute; top:0; width:225px; height:100%; transition: 1s; z-index:2;}
+.slide-nav .overflow-nav {position:relative; overflow:scroll; width:100%; height:100%;}
 .slide-nav .nav-title {font-size:1rem; height:50px; line-height:50px; text-align:center; text-transform:uppercase; border-bottom:1px solid #ddd;}
 #slide-nav-left {left: -225px; background-color:#666;
 -moz-box-shadow: inset -5px 0px 10px 0px #454545;
